# spheres

./: .gitignore  CMakeLists.txt  README.md  settings.prm  tpl.prm
include/: bone.h  bone_front.h  case_bending_displacement.h  case_bending_rotation.h  case_tension.h  case_tension_pointwise.h  case_torsion.h  case_two_sections.h  common.h  components.h  front.h  linear_solver_sp.h  parameter_reader.h  scalar_quantity_section_resultant.h  scalar_quantity_torsion.h  spheres.h  study_case.h
mesh/: coarse.msh  full.geo  full_coarse.msh  full_fine.msh  meshing.geo  quarter.geo  quarter_fine.msh
scripts/: batch.py  batch_mpi.py  check_bending_stiffness.py  params.py  run_all.py  settings.py
settings/: settings-tpl.prm  settings.prm  spheres2-tension-tpl.geo  spheres2-tpl.geo  spheres3-torsion-tpl.geo  spheres3-tpl.geo  spheres3-universal-tpl.geo  tpl.prm
src/: CMakeLists.txt  bone.cpp  bone_front.cpp  components.cpp  example.cpp  front.cpp  parameter_reader.cpp  runner.cpp  spheres.cpp
tex/: BoneHealing.tex
